gcc/testsuite/g++.dg/diagnostic/no-type-2.C
// { dg-options "-w" }

foo() {}  // { dg-error "1:ISO C\\+\\+ forbids declaration" }
